# acq2bva

./: .gitignore  LICENSE  README.md  acq2raw.py  error.py  main.py  pyproject.toml
acq2bva/: __init__.py  acq2bva.py  acq2raw.py  acq2vhdr.py  acq2vmrk.py
acq2bva/runners/: acq2bva.py  acq2bva_args.py  acq2bva_cmd.py  acq2bva_text.py  command_line.py
acq2bva/util/: error.py
acq2bva/writers/: __init__.py  acq2bva.py  acq2raw.py  acq2vhdr.py  acq2vmrk.py
examples/: example.py  settings.toml
templates/: header_file.vhdr
