[tool.poetry]
name = "acq2bva"
version = "0.1.0"
description = ""
authors = ["Haffi921 <haffi921@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
bioread = {extras = ["all"], version = "^2.1.3"}

[tool.poetry.dev-dependencies]
ipython = "^7.28.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
