[tool.poetry]
name = "acq2bva"
version = "0.1.0"
description = ""
authors = ["Haffi921 <haffi921@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
bioread = {extras = ["all"], version = "^2.1.3"}
isort = "^5.9.3"
black = "^21.9b0"

[tool.poetry.dev-dependencies]
ipython = "^7.28.0"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
